# 21_12_2025_python_2

./: .gitignore  01_podstawy.ipynb  02_funkcje.ipynb  03_klasy.ipynb  04_django_basics.ipynb  05_django_templates.ipynb  06_django_templates.ipynb  Untitled.ipynb  dodatkowe_narzedzia.md  przestrzenie.py  pyproject.toml
cwiczenia/: log.txt  (+15 more)
django_examples/hello_django/: .coverage  README.md  db.sqlite3  pyproject.toml  pytest.ini  xxx.http
django_examples/hello_django/accounts/: middleware.py
django_examples/hello_django/blog/: contextprocessors.py  factories.py  models.py  services.py  urls.py  views.py
django_examples/hello_django/books/: factories.py  models.py  services.py  urls.py  views.py
django_examples/hello_django/hello_django/: settings.py  urls.py
django_examples/hello_django/matematyka/: admin.py  apps.py  models.py  services.py  urls.py  views.py
django_examples/hello_django/modele/: admin.py  forms.py  models.py  urls.py  views.py
django_examples/hello_django/news/: admin.py  context_processors.py  factories.py  forms.py  models.py  services.py  urls.py  views.py
django_examples/hello_django/simplerouting/: admin.py  apps.py  models.py  urls.py  views.py
django_examples/hello_django/templates/: base.html
django_examples/hello_django/templates_examples/: apps.py  urls.py  views.py
django_examples/orm_playground/: .env.example  Makefile  README.md  docker-compose.yml  general_view.md  pyproject.toml
django_examples/orm_playground/catalog/: models.py
django_examples/orm_playground/core/: models.py  utils.py
django_examples/orm_playground/docs/: orm_advanced.md  orm_medium.md  orm_reporting_walkthrough.md  wytyczne_prowadzacego_orm_medium_advanced.md  (+1 more)
(+126 files in other folders)
