[project]
name = "21-12-2025-python-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.10",
    "django-extensions>=4.1",
    "djlint>=1.36.4",
    "jupyter>=1.1.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]

[tool.uv.workspace]
members = [
    "django_examples/django_rest_framework_tutorial",
]
