[project]
name = "orm-playground"
version = "0.1.0"
description = "Django ORM laboratory project"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "Django>=5.0,<6.0",
]

[project.optional-dependencies]
postgres = [
  "psycopg[binary]>=3.1",
]
dev = [
  "pytest>=8.0",
  "pytest-django>=4.8",
  "ruff>=0.8",
  "black>=24.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "orm_playground.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "DJ", "PT"]
ignore = ["DJ008"]
